Mobile optimization + SEO meta tags + remove lovable branding

--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
 <!doctype html>
-<html lang="en">
+<html lang="el">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Lovable App</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Astypalea Tours | Ταξιδιωτικό Γραφείο Αστυπάλαια</title>
+    <meta name="description" content="Ταξιδιωτικό γραφείο στην Αστυπάλαια. Κρουαζιέρες, ακτοπλοϊκά, αεροπορικά, ξενοδοχεία & πακέτα διακοπών από το 1985." />
+    <meta name="author" content="Astypalea Tours" />
+    <meta name="keywords" content="Αστυπάλαια, ταξιδιωτικό γραφείο, κρουαζιέρες, ακτοπλοϊκά, πακέτα διακοπών, Δωδεκάνησα" />
+    <link rel="canonical" href="https://www.astypaleatours.gr" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Astypalea Tours | Ταξιδιωτικό Γραφείο Αστυπάλαια" />
+    <meta property="og:description" content="Ανακαλύψτε την Αστυπάλαια. Κρουαζιέρες, εκδρομές, ξενοδοχεία & πακέτα διακοπών από το 1985." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://www.astypaleatours.gr" />
+    <meta property="og:image" content="https://www.astypaleatours.gr/og-image.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Astypalea Tours" />
+    <meta name="twitter:image" content="https://www.astypaleatours.gr/og-image.png" />
   </head>
 
   <body>
